makedumpfile (1.3.3-1) UNRELEASED; urgency=low

  * Upload to Debian. Changes from Ubuntu:
    - Switch to quilt from dpatch
    - Set myself as the maintainer
    - Don't ignore make clean errors
    - Update to debhelper compatibility level 7
    - Install the manpage with maximum compression
    - Update Standards-Version to 3.8.2, adding a README.source
      explaining the quilt patch setup

 -- John Wright <jsw@debian.org>  Sun, 26 Jul 2009 12:08:30 +0200

makedumpfile (1.3.3-0ubuntu4) karmic; urgency=low

  * debian/patches/02-Add_x86_64_linux-2.6.31.patch:
    - apply patch by Ken'ichi Ohmichi to support 2.6.31 on
      amd64 (kernel memory layout changed)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 16 Jul 2009 09:18:33 +0200

makedumpfile (1.3.3-0ubuntu3) karmic; urgency=low

  * debian/rules, debian/control:
    - add dpatch
  * debian/patches/01_fix_makefile:
    - fix make install target

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 23 Jun 2009 13:14:10 +0200

makedumpfile (1.3.3-0ubuntu2) karmic; urgency=low

  * fix FTBFS due to missing man dir

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 23 Jun 2009 09:21:08 +0200

makedumpfile (1.3.3-0ubuntu1) karmic; urgency=low

  * New upstream release
  * depends on latest libdw-dev (the previous version does
    not ship the required static lib)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 22 Jun 2009 16:19:42 +0200

makedumpfile (1.2.9-0ubuntu3) intrepid; urgency=low

  * Add missing build dependency "zip" to fix FTBFS.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 08 Oct 2008 15:11:25 +0200

makedumpfile (1.2.9-0ubuntu2) intrepid; urgency=low

  * Corrected FTBFS caused by a mistake in the makefile

 -- Michael Casadevall <sonicmctails@gmail.com>  Mon, 06 Oct 2008 02:01:26 -0400

makedumpfile (1.2.9-0ubuntu1) intrepid; urgency=low

  * New upstream version (LP: #271956)
  * Support ia64 discontigmem kernels of linux-2.6.20+.
  * Support x86_64 linux-2.6.27 kernel.