@@ -4,7 +4,8 @@ makedumpfile (1.3.3-1) UNRELEASED; urgency=low
     - Switch to quilt from dpatch
     - Set myself as the maintainer
     - Don't ignore make clean errors
-    - Update to debhelper compatibility level 7
+    - Update to debhelper compatibility level 7 and simplify the rules
+      file by using dh
     - Install the manpage with maximum compression
     - Update Standards-Version to 3.8.2, adding a README.source
       explaining the quilt patch setup
